<resources>
    <string name="app_name">Crop Connoisseur</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_email">"   You will receive an email to reset your password "</string>
    <string name="weather">Weather</string>
    <string name="crop_details">Crop Details</string>
    <string name="moisture_level">Moisture Level</string>
    <string name="soil_fertility_check">Soil Fertility Check</string>
    <string name="agricultural_schemes">Agricultural Schemes</string>
    <string name="agricultural_news">Agricultural News</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="detect_disease">Detect Disease</string>
    <string name="home">Home</string>
    <string name="community">Community</string>
    <string name="ask_a_question">Ask a Question</string>
    <string name="filter_topic">Filter Topic</string>
    <string name="my_questions">My Questions</string>
    <string name="cancel">Cancel</string>
    <string name="post">Post</string>
    <string name="enter_your_question_here">Enter your question here</string>
    <string name="topic">Topic :</string>
    <string name="view_all_comments">View all comments</string>
    <string name="write_a_comment">Write a comment...</string>

    <string-array name="topics">
        <item>Select Topic</item>
        <item>Disease</item>
        <item>Agri-News</item>
        <item>Agri-Schemes</item>
        <item>Solution</item>
        <item>Tools or Technologies</item>
        <item>Other</item>
    </string-array>

</resources>