<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AskQuestionActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_below="@id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtAsk"
            android:text="@string/ask_a_question"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_centerHorizontal="true"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/topicSpinner"
            android:layout_below="@+id/txtAsk"
            android:layout_marginTop="10dp"
            android:entries="@array/topics"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/question"
            android:hint="@string/enter_your_question_here"
            android:layout_below="@+id/topicSpinner"
            android:textSize="18sp"
            android:lines="3"
            android:scrollbars="vertical"
            android:layout_marginTop="10dp"
            app:met_underlineColor="@color/colorAccent"
            app:met_primaryColor="@color/colorAccent"
            app:met_textColorHint="#9E9E9E"
            app:met_floatingLabelAnimating="true"
            app:met_floatingLabel="highlight"/>
        
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/image"
            android:layout_below="@+id/question"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_add_image"
            android:scaleType="centerCrop"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:layout_marginTop="15dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnCancel"
                android:text="@string/cancel"
                android:backgroundTint="@color/colorAccent"
                android:layout_toStartOf="@id/center"
                android:layout_alignParentStart="true"
                android:textStyle="bold"
                android:textColor="#fff"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/center"
                android:layout_centerHorizontal="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnPost"
                android:text="@string/post"
                android:textStyle="bold"
                android:layout_toEndOf="@id/center"
                android:layout_alignParentEnd="true"
                android:textColor="#fff"
                android:textSize="16sp"
                android:backgroundTint="@color/colorAccent"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>